make modification and improvements to files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flower</title>
-    <link rel="Icon " href="assets/flower.png">
-    <link rel="stylesheet" href="resWebsite.css" />
-    <link rel="stylesheet" href="mediaQ.css" />
+    <link rel="Icon " href="./assets/flower.png">
+    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./responsive.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css"
@@ -32,7 +32,7 @@
           />
         </video>
         <header style="z-index: 500">
-          <div class="logo">FL<i class="ri-flower-fill"></i>WER</div>
+          <a class="logo" href="#home">FL<i class="ri-flower-fill"></i>WER</a>
           <nav class="nav">
             <ul>
               <li class="nav-item"><a href="#home">HOME</a></li>
@@ -291,5 +291,5 @@
       <p>© 2025 FLOWER , All Right Reserved</p>
     </footer>
   </body>
-  <script src="resWebsite.js"></script>
+  <script src="./main.js"></script>
 </html>
